# icecap

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  build-tool.sh  build.py  default.nix  easy-settings.cmake  script.uimg  settings.cmake
build-ui/: build.py
build-ui/export/: default.nix
demos/: Makefile  README.md  default.nix
demos/hypervisor/: Makefile  README.md  default.nix
demos/hypervisor-demo/: README.md  config.nix  default.nix
docker/: Dockerfile  Dockerfile.stateful  Dockerfile.stateless  Makefile  bashrc  entrypoint.sh  install-nix.sh  nix.conf  setup.sh
docs/: building-without-docker.md  building-without-nix.md  getting-started.md  hacking-guide.md  hacking.md  hypervisor-status.md  index.md
docs/images/: icecap-logo.drawio
examples/: README.md  default.nix
examples/00-hello-sel4/: CMakeLists.txt
examples/00-hello-sel4/src/: main.c
examples/01-minimal-root/: default.nix
examples/01-minimal-root-task/: default.nix
examples/01-minimal-root/root-task/: icecap.mk
examples/02-minimal-root-task-with-rust/: default.nix
examples/02-minimal-root-task-with-rust/root-task/: crate.nix
examples/02-minimal-root-with-rust/: default.nix
examples/02-minimal-root-with-rust/minimal/: crate.nix
examples/02-minimal-root-with-rust/root-task/: crate.nix
examples/03-minimal-capdl/: cdl.py  default.nix
examples/03-minimal-capdl/example-component/: icecap.mk
examples/04-minimal-capdl-with-rust/: cdl.py  default.nix
examples/04-minimal-capdl-with-rust/example-component/: crate.nix
examples/04-minimal-capdl-with-rust/minimal/: crate.nix
examples/05-basic-system/: default.nix
examples/05-basic-system/application/: crate.nix
examples/05-basic-system/cdl/: application.py  composition.py  serial_server.py  timer_server.py
examples/05-basic-system/components/serial-server/: Cargo.toml  crate.nix
examples/05-basic-system/components/serial-server/src/: main.rs
examples/06-dynamism/: default.nix  subsystem.py
examples/06-hypervisor/: default.nix
examples/07-hypervisor/: default.nix
examples/0x-virtio-console/: Cargo.toml  icecap.mk
examples/0x-virtio-console/cdl/: timer_server.py
examples/0x-virtio-console/components/application/: Cargo.toml  crate.nix
examples/0x-virtio-console/components/timer-server/: Cargo.toml
examples/0x-virtio-console/components/timer-server/src/: main.rs
examples/0x-virtio-console/components/timer-server/types/: Cargo.toml
examples/wip-dyndl/: default.nix  supersystem.py
hack/: Makefile  bashrc.example.sh  build-test.nix  check-formatting.py  check-source-filters.nix  collect-garbage.sh  config.example.nix  default.example.nix  display-nix-stats.py  flatten-android-repo-patch.py  flatten-repo-patch.py  git-icecap-keep  prelude.example.gdb  shortcuts.example.nix  tcb-size.nix
hack/cache-maintenance/: Makefile  cache-root.nix  populate.nix  populate.sh  source-test.nix  source-test.sh
hack/ci/: Makefile
hack/ci/infrastructure-examples/: config.example.nix
hack/ci/nixos-modules/: config.nix
hack/dev-environment-examples/: bashrc.example.sh  config.example.nix  prelude.example.gdb  shortcuts.example.nix
hack/nix/: default.nix
nix/: default.nix
nix/framework/: config.nix  default.nix
nix/framework/meta/: default.nix  everything.nix
nix/framework/scope/: default.nix  source.nix
nix/framework/top-level/: default.nix  everything.nix  generated-sources.nix
nix/hypervisor/: default.nix  overlay.nix
nix/hypervisor/meta/: default.nix  everything.nix
nix/hypervisor/overlay/: default.nix
nix/hypervisor/scope/: default.nix
nix/hypervisor/top-level/: default.nix  everything.nix
nix/instances/: config.nix  default.nix
nix/instances/scope/: default.nix  mk-icedl.nix  mk-instance.nix  mk-run.nix
nix/meta/: build-test.nix  build-tests.nix  default.nix  display.nix  everything.nix  generate.nix  mk-instance.nix  tcb-size.nix
nix/meta/ad-hoc-build-tests/: default.nix  linux.nix  seL4.nix
nix/meta/automated-tests/: default.nix
nix/meta/demos/: default.nix
nix/meta/docs/: default.nix
nix/meta/examples/: default.nix
nix/meta/export/: default.nix
nix/meta/generated-docs/: default.nix
nix/meta/instances/: default.nix  mk-instance.nix
nix/meta/rust-aggregate/: default.nix  linux.nix  seL4.nix
nix/meta/tcb-size/: default.nix  helper.py
nix/meta/tests/: default.nix
nix/nixos-lite/: default.nix  eval.nix
nix/nixos-lite/modules/: default.nix
nix/nixos-lite/pkgs/: aggregate-modules.nix  mk-busybox-initramfs.nix  mk-extra-utils.nix  mk-initramfs.nix  mk-modules-closure.nix
nix/overlay/: default.nix  lib.nix  python.nix
nix/scope/: default.nix  source.nix
nix/scope/configured/: cmake-config.nix  default.nix
nix/scope/crates/: default.nix  manifests.nix  patches.nix
nix/scope/dev/: capdl-tool.nix  dyndl-serialize-spec.nix  icecap-append-devices.nix  icecap-serialize-event-server-out-index.nix  icecap-serialize-runtime-config.nix  icecap-show-backtrace.nix  sel4-manual.nix  serialize-config.nix
nix/scope/device-tree/: default.nix  guest.dts
nix/scope/linux-user/: crosvm-9p-server.nix  icecap-host.nix
nix/scope/nix-utils/: config-utils.nix  cpio-utils.nix  default.nix  int-to-hex.nix  mk-cpio-from.nix  mk-cpio-obj.nix  mk-cpio.nix  mk-files-obj.nix  patch-src.nix  strip-elf-split-trivial.nix  strip-elf-split.nix  strip-elf.nix  trivial-builders.nix
nix/scope/ocaml/: default.nix
nix/scope/plat-utils/: virt.nix
nix/scope/rust/: bindgen.nix  build-heterogeneous-rust-package.nix  build-rust-package-incrementally.nix  build-rust-package.nix  cargo.nix  crate-utils.nix  crates-io-index-cache.nix  default.nix  fetch-cargo.nix  fetch-crates.nix  generate-lockfile.nix  rustc.nix  (+2 more)
nix/targets/: build-test.nix  default.nix  tcb-size.nix
nix/top-level/: default.nix
src/c/: Makefile
src/ocaml/mirage-icecap/internal/: dune  icecap.ml  loop.ml  net.ml  random_lame.ml  stack.ml  time.ml
src/python/: edb.py
src/rust/: Cargo.toml  Makefile  crates.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
(+1787 files in other folders)
